# mbt_vs_fuzzing

./: .gitignore  FUZZING_TUTORIAL.md  LICENSE  MBF_TUTORIAL.md  README.md  expression.py  fuzzer.py  impl_registry.py  pyproject.toml  sloppy_vm_impl_v1.py  sloppy_vm_impl_v2.py  sloppy_vm_impl_v3.py  sloppy_vm_impl_v4.py  sloppy_vm_spec.py  test_sloppy_vm.py
docs/: ENUMERATION_TUTORIAL.md  ENUMERATIVE_MBT_TUTORIAL.md  FUZZING_TUTORIAL.md  MBF_TUTORIAL.md
src/sloppyvm/: __init__.py  registry.py  spec.py
src/sloppyvm/fuzzing/: __init__.py  enumeration.py  expression.py  fuzzer.py
src/sloppyvm/implementations/: __init__.py  v1.py  v2.py  v3.py  v4.py
tests/: __init__.py  test_enumeration.py  test_spec.py
