[project]
name = "sloppyvm"
version = "0.1.0"
description = "SloppyVM: Research comparing Model-Based Testing vs Fuzzing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
sloppyvm-fuzz = "sloppyvm.fuzzing.fuzzer:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
